add:top viewers

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Anime | Template</title>
+    <title>Cinamon</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -79,14 +79,14 @@
     <section class="hero">
         <div class="container">
             <div class="hero__slider owl-carousel">
-                {%for populars in popular %}
-                <div class="hero__items set-bg" data-setbg="{{populars.backdrop_path}}">
+                {%for movies in movie[:3] %}
+                <div class="hero__items set-bg" data-setbg="{{movies.backdrop_path}}">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
                                 <div class="label">MOST POPULARS</div>
-                                <h2>{{populars.title}}</h2>
-                                <p >{{populars.overview[:50]}}...</p>
+                                <h2>{{movies.title}}</h2>
+                                <p >{{movies.overview[:50]}}...</p>
                                 <a href="#"><span>More details</span> <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="product__item">
                                     <div class="product__item__pic set-bg" data-setbg="{{movies.poster_path}}">
-                                        <div class="ep">{{movies.rating}} / 10</div>
+                                        <div class="ep">{{movies.rating}}</div>
                                         <div class="comment"><i class="fa fa-calendar">  {{movies.date[0:4]}}</i></div>
                                         <div class="view"><i class="fa fa-eye"></i> {{movies.popularity}}</div>
                                     </div>
@@ -142,40 +142,25 @@
                             <ul class="filter__controls">
                                 <li class="active" data-filter="*">Day</li>
                                 <li data-filter=".week">Week</li>
-                                <li data-filter=".month">Month</li>
-                                <li data-filter=".years">Years</li>
                             </ul>
+                            {%for trend in trends[:5]%}
                             <div class="filter__gallery">
                                 <div class="product__sidebar__view__item set-bg mix day years"
-                                data-setbg="img/sidebar/tv-1.jpg">
-                                <div class="ep">18 / ?</div>
-                                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                                <h5><a href="#">Boruto: Naruto next generations</a></h5>
+                                data-setbg="{{trend.image}}">
+                                <div class="ep">{{trend.media_type}}</div>
+                                <div class="view"><i class="fa fa-eye"> {{trend["popularity"]}}</i></div>
+                                <h5><a href="#">{{trend.title}}</a></h5>
                             </div>
-                            <div class="product__sidebar__view__item set-bg mix month week"
-                            data-setbg="img/sidebar/tv-2.jpg">
-                            <div class="ep">18 / ?</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                            <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
-                        </div>
+                            {%endfor%}
+                          {%for trend_week in trends_week[:4]%}
                         <div class="product__sidebar__view__item set-bg mix week years"
-                        data-setbg="img/sidebar/tv-3.jpg">
-                        <div class="ep">18 / ?</div>
-                        <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                        <h5><a href="#">Sword art online alicization war of underworld</a></h5>
+                        data-setbg="{{trend_week.image}}">
+                        <div class="ep">{{trend_week.media_type}}</div>
+                        <div class="view"><i class="fa fa-eye"></i>{{trend_week.popularity}}</div>
+                        <h5><a href="#">{{trend_week.title}}</a></h5>
                     </div>
-                    <div class="product__sidebar__view__item set-bg mix years month"
-                    data-setbg="img/sidebar/tv-4.jpg">
-                    <div class="ep">18 / ?</div>
-                    <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                    <h5><a href="#">Fate/stay night: Heaven's Feel I. presage flower</a></h5>
-                </div>
-                <div class="product__sidebar__view__item set-bg mix day"
-                data-setbg="img/sidebar/tv-5.jpg">
-                <div class="ep">18 / ?</div>
-                <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                <h5><a href="#">Fate stay night unlimited blade works</a></h5>
-            </div>
+                    {%endfor%}
+                    
         </div>
     </div>
     <div class="product__sidebar__comment">
