--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -1,5 +1,5 @@
 {% extends "components/base.html"%}
-{%block title%}popular{%endblock%}
+{%block title%}detail{%endblock%}
 {%block content%}
 
 
@@ -53,9 +53,8 @@
       <div class="row">
           <div class="col-lg-12">
               <div class="breadcrumb__links">
-                  <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                  <a href="./categories.html">Categories</a>
-                  <span>Romance</span>
+                  <a href="/"><i class="fa fa-home"></i> Home</a>
+                  <a href="./{{d_movie['id']}}">Detail</a>
               </div>
           </div>
       </div>
@@ -69,7 +68,9 @@
       <div class="anime__details__content">
           <div class="row">
               <div class="col-lg-3">
-                  <div class="anime__details__pic set-bg" data-setbg="img/anime/details-pic.jpg">
+                {%for dmv in demovie%}
+                  <div class="anime__details__pic set-bg" data-setbg="{{dmv.poster_path}}">
+                    {%endfor%}
                       <div class="comment"><i class="fa fa-comments"></i> 11</div>
                       <div class="view"><i class="fa fa-eye"></i> 9141</div>
                   </div>
@@ -77,8 +78,13 @@
               <div class="col-lg-9">
                   <div class="anime__details__text">
                       <div class="anime__details__title">
-                          <h3>Fate Stay Night: Unlimited Blade</h3>
-                          <span>フェイト／ステイナイト, Feito／sutei naito</span>
+                          <h3>{{d_movie["original_title"]}}</h3>
+                          <div class="d-flex">
+                          {%for comp in d_movie["production_companies"]%}
+
+                              <span class="mr-2 text-white bg-secondary  rounded px-2">{{comp.name }} </span>
+                              {%endfor%}
+                            </div>
                       </div>
                       <div class="anime__details__rating">
                           <div class="rating">
@@ -90,10 +96,7 @@
                           </div>
                           <span>1.029 Votes</span>
                       </div>
-                      <p>Every human inhabiting the world of Alcia is branded by a “Count” or a number written on
-                          their body. For Hina’s mother, her total drops to 0 and she’s pulled into the Abyss,
-                          never to be seen again. But her mother’s last words send Hina on a quest to find a
-                      legendary hero from the Waste War - the fabled Ace!</p>
+                      <p>{{d_movie["overview"]}}</p>
                       <div class="anime__details__widget">
                           <div class="row">
                               <div class="col-lg-6 col-md-6">
