--- a/app/templates/components/base.html
+++ b/app/templates/components/base.html
@@ -1,45 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{url_for('static',filename='/image/favicon.ico')}}"
+    />
+    <!-- title -->
+    <title>{%block title%}{%endblock%} | Cinamon</title>
+    <!-- style -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- title -->
-  <title>{%block title%}{%endblock%} | Cinamon</title>
-  <!-- style -->
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" />
+    <!-- Css Styles -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/font-awesome.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/elegant-icons.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/plyr.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/nice-select.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/owl.carousel.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/slicknav.min.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+  </head>
 
-  <!-- Css Styles -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/elegant-icons.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/plyr.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/nice-select.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-</head>
+  <body>
+    <div id="preloder">
+      <div class="loader"></div>
+    </div>
 
-<body>
+    <header class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <div class="header__logo">
+              <a href="/">
+                <img
+                  src="{{url_for('static',filename='image/logo.png')}}"
+                  alt="logo"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="header__nav"></div>
+          </div>
+          <div class="col-lg-2">
+            <div class="header__right">
+              <a href="#" class="search-switch"
+                ><span class="icon_search"></span
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div id="mobile-menu-wrap"></div>
+      </div>
+    </header>
+    {%block content%} {%endblock%} {%block scripts%}
 
-  <div id="preloder">
-    <div class="loader"></div>
-  </div>
-  {%block content%}
-  {%endblock%}
-  {%block scripts%}
-  <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
-  <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-  <script src="{{url_for('static', filename='js/player.js')}}"></script>
-  <script src="{{url_for('static', filename='js/jquery.nice-select.min.js')}}"></script>
-  <script src="{{url_for('static', filename='js/mixitup.min.js')}}"></script>
-  <script src="{{url_for('static', filename='js/jquery.slicknav.js')}}"></script>
-  <script src="{{url_for('static', filename='js/owl.carousel.min.js')}}"></script>
-  <script src="{{url_for('static', filename='js/main.js')}}"></script>
-  {%endblock%}
-</body>
+    <!-- Footer Section Begin -->
+    <footer class="footer">
+      <div class="page-up">
+        <a href="#" id="scrollToTopButton"
+          ><span class="arrow_carrot-up"></span
+        ></a>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="footer__logo">
+              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="footer__nav">
+              <ul>
+                <li class="active"><a href="./index.html">Homepage</a></li>
+                <li><a href="./categories.html">Categories</a></li>
+                <li><a href="./blog.html">Our Blog</a></li>
+                <li><a href="#">Contacts</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <p>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              All rights reserved | This template is made with
+              <i class="fa fa-heart" aria-hidden="true"></i> by
+              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Section End -->
 
+    <!-- Search model Begin -->
+    <div class="search-model">
+      <div class="h-100 d-flex align-items-center justify-content-center">
+        <div class="search-close-switch"><i class="icon_close"></i></div>
+        <form class="search-model-form">
+          <input type="text" id="search-input" placeholder="Search here....." />
+        </form>
+      </div>
+    </div>
+    <!-- Search model end -->
+
+    <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/player.js')}}"></script>
+    <script src="{{url_for('static', filename='js/jquery.nice-select.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/mixitup.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/jquery.slicknav.js')}}"></script>
+    <script src="{{url_for('static', filename='js/owl.carousel.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
+    {%endblock%}
+  </body>
 </html>
