--- a/app/templates/components/base.html
+++ b/app/templates/components/base.html
@@ -101,16 +101,17 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="footer__logo">
-              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+              <a href="/"
+                ><img
+                  src="{{url_for('static',filename='image/logo.png')}}"
+                  alt="logo"
+              /></a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="footer__nav">
               <ul>
-                <li class="active"><a href="./index.html">Homepage</a></li>
-                <li><a href="./categories.html">Categories</a></li>
-                <li><a href="./blog.html">Our Blog</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li class="active"><a href="/">Cinema Breakdown</a></li>
               </ul>
             </div>
           </div>
@@ -121,9 +122,9 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All rights reserved | This template is made with
+              All rights reserved | This webaite is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              <a href="https://github.com/Taufik-H" target="_blank">Taufik-H</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
