--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-{%extends "components/base.html" %} {%block title%}Trailer{%endblock%} {%block
+{%extends "components/base.html" %} {%block title%}Login{%endblock%} {%block
 content%}
 <!-- Normal Breadcrumb Begin -->
 <section
