--- a/app/templates/mylist.html
+++ b/app/templates/mylist.html
@@ -1,17 +1,40 @@
-<div class="dropdown">
-  <button
-    class="btn btn-secondary dropdown-toggle"
-    type="button"
-    id="dropdownMenuButton"
-    data-toggle="dropdown"
-    aria-haspopup="true"
-    aria-expanded="false"
-  >
-    Dropdown button
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
+{% extends "components/base.html"%} {%block title%}My lists{%endblock%} {%block
+content%}
+<!-- navbar -->
+<p hidden>{%block navhome%}{%endblock%} {%block navlist%}active{%endblock%}</p>
+<div class="mt-5">
+  <div class="breadcrumb-option">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="breadcrumb__links">
+            <a href="/"><i class="fa fa-home"></i> Home</a>
+            <a href="/mylist">Opyion</a>
+            <span>My lists</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="p-5">
+    <div class="row justify-content-center">
+      <div id="carouselExampleSlidesOnly" class="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block"
+              src="{{url_for('static',filename='image/sorry.png')}}"
+              alt="movie list is empty"
+              style="width: 250px; margin: 0 auto"
+            />
+            <h5 class="text-light p-5">
+              Sorry you don't have saved movie yet!!
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+{%endblock%}
