update password & layout

--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -136,7 +136,7 @@ content%}
                 alt=""
               />
             </div>
-            <div class="anime__review__item__text">
+            <div class="anime__review__item__text w-full">
               <h6>
                 {{reviewers["author"]}} -
                 <span>
@@ -144,66 +144,14 @@ content%}
                 >
               </h6>
               <p>{{reviewers.content[:100]}}...</p>
-              <button class="btn btn-sm mt-2 btn-primary">View Comment</button>
+              <!-- <button class="btn btn-sm mt-2 btn-primary">View Comment</button> -->
             </div>
           </div>
           {%endfor%}
         </div>
-        <div class="anime__details__form">
-          <div class="section-title">
-            <h5>Your Comment</h5>
-          </div>
-          <form action="#">
-            <textarea placeholder="Your Comment"></textarea>
-            <button type="submit">
-              <i class="fa fa-location-arrow"></i> Review
-            </button>
-          </form>
-        </div>
+     
       </div>
-      <div class="col-lg-4 col-md-4">
-        <div class="anime__details__sidebar">
-          <div class="section-title">
-            <h5>you might like...</h5>
-          </div>
-          <div
-            class="product__sidebar__view__item set-bg"
-            data-setbg="img/sidebar/tv-1.jpg"
-          >
-            <div class="ep">18 / ?</div>
-            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-            <h5><a href="#">Boruto: Naruto next generations</a></h5>
-          </div>
-          <div
-            class="product__sidebar__view__item set-bg"
-            data-setbg="img/sidebar/tv-2.jpg"
-          >
-            <div class="ep">18 / ?</div>
-            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-            <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
-          </div>
-          <div
-            class="product__sidebar__view__item set-bg"
-            data-setbg="img/sidebar/tv-3.jpg"
-          >
-            <div class="ep">18 / ?</div>
-            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-            <h5>
-              <a href="#">Sword art online alicization war of underworld</a>
-            </h5>
-          </div>
-          <div
-            class="product__sidebar__view__item set-bg"
-            data-setbg="img/sidebar/tv-4.jpg"
-          >
-            <div class="ep">18 / ?</div>
-            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-            <h5>
-              <a href="#">Fate/stay night: Heaven's Feel I. presage flower</a>
-            </h5>
-          </div>
-        </div>
-      </div>
+    
     </div>
   </div>
 </section>
