--- a/app/templates/fpassword.html
+++ b/app/templates/fpassword.html
@@ -18,11 +18,21 @@
         <div class="col-8 col-md-4 align-self-center">
           <div class="card">
             <div class="card-body">
-              <h6>Create your new password</h6>
+              <h6 class="mb-3">Create your new password</h6>
+              <blockquote class="blockquote mb-0 mt-2">
+                <footer class="blockquote-footer">
+                  i'm <cite title="Source Title">{{session.username}} </cite>
+                </footer>
+              </blockquote>
               <div class="mt-2">
                 <!-- forms -->
                 <form class="form-floating" method="post">
                   <div class="form-floating mt-3 mb-3">
+                    <input
+                      type="hidden"
+                      name="user_id"
+                      value="{{session.user_id}}"
+                    />
                     <input
                       type="password"
                       class="form-control"
@@ -51,7 +61,7 @@
                   <button type="submit" class="btn btn-success mt-3">
                     Create
                   </button>
-                  <a href="/login" class="btn btn-warning mt-3 text-white"
+                  <a href="/login" class="btn btn-secondary mt-3 text-white"
                     >Cancle</a
                   >
                 </form>
