--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,8 +2,8 @@
 content%}
 <!-- Normal Breadcrumb Begin -->
 <section
-  class="normal-breadcrumb set-bg"
-  data-setbg="img/normal-breadcrumb.jpg"
+  class="set-bg"
+ 
 >
   <div class="container">
     <div class="row">
@@ -60,6 +60,7 @@ content%}
               <span class="icon_lock"></span>
             </div>
             <button type="submit" class="site-btn">Login Now</button>
+            <a href="/forgotpassword" class="text-danger ml-2">Forgot password?</a>
           </form>
         </div>
       </div>
@@ -72,32 +73,6 @@ content%}
         </div>
       </div>
     </div>
-    <!-- <div class="login__social">
-      <div class="row d-flex justify-content-center">
-        <div class="col-lg-6">
-          <div class="login__social__links">
-            <span>or</span>
-            <ul>
-              <li>
-                <a href="#" class="facebook"
-                  ><i class="fa fa-facebook"></i> Sign in With Facebook</a
-                >
-              </li>
-              <li>
-                <a href="#" class="google"
-                  ><i class="fa fa-google"></i> Sign in With Google</a
-                >
-              </li>
-              <li>
-                <a href="#" class="twitter"
-                  ><i class="fa fa-twitter"></i> Sign in With Twitter</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
 </section>
 <!-- Login Section End -->
