--- a/app/templates/components/base.html
+++ b/app/templates/components/base.html
@@ -104,9 +104,10 @@
           </div>
           <div class="col-lg-2">
             <div class="header__right">
-              <a href="#" class="search-switch"
+              <!-- <a href="#" class="search-switch"
                 ><span class="icon_search"></span
-              ></a>
+              ></a> -->
+              <p class="text-white">{{session.username}}</p>
               <a href="#"><span class="icon_profile"></span></a>
             </div>
           </div>
