--- a/app/templates/components/base.html
+++ b/app/templates/components/base.html
@@ -103,11 +103,11 @@
             </div>
           </div>
           <div class="col-lg-2">
-            <div class="header__right">
-              <!-- <a href="#" class="search-switch"
-                ><span class="icon_search"></span
-              ></a> -->
-              <p class="text-white">{{session.username}}</p>
+            <div class="header__right d-flex">
+              <a href="#" class="search-switch"></a>
+                <p class="text-white mr-2">{{session.username}}</p>
+                <!-- <span class="icon_search"></span> -->
+              </a>
               <a href="#"><span class="icon_profile"></span></a>
             </div>
           </div>
