--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -75,10 +75,9 @@ content%}
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <ul>
-                    <li><span>Type:</span> TV Series</li>
-                    <li><span>Studios:</span> Lerche</li>
-                    <li><span>Date aired:</span> Oct 02, 2019 to ?</li>
-                    <li><span>Status:</span> Airing</li>
+                    <li><span>Type:</span> Movie </li>
+                    <li><span>Date aired:</span> {{d_movie.release_date}} </li>
+                    <li><span>Status:</span> {{d_movie.status}} </li>
                     <li>
                       <span>Genre:</span>
                       {%for gen in genre%} {{gen['name']}} {%endfor%}
@@ -87,11 +86,8 @@ content%}
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <ul>
-                    <li><span>Scores:</span> 7.31 / 1,515</li>
-                    <li><span>Rating:</span> 8.5 / 161 times</li>
-                    <li><span>Duration:</span> 24 min/ep</li>
-                    <li><span>Quality:</span> HD</li>
-                    <li><span>Views:</span> 131,541</li>
+                    <li><span>Rating:</span> {{vote_average}} </li>
+                    <li><span>Duration:</span> {{d_movie.runtime}} Minutes </li>
                   </ul>
                 </div>
               </div>
