--- a/app/templates/components/base.html
+++ b/app/templates/components/base.html
@@ -155,6 +155,10 @@
               All rights reserved | This webaite is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
               <a href="https://github.com/Taufik-H" target="_blank">Taufik-H</a>
+              <a href="https://github.com/BangKape" target="_blank">Daffa-K</a>
+              <a href="https://github.com/munfaizall" target="_blank">Imun-F</a>
+              <a href="#"target="_blank">Ikhsan-D</a>
+              <a href="#" target="_blank">Galang-Y</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
@@ -164,15 +168,6 @@
     <!-- Footer Section End -->
 
     <!-- Search model Begin -->
-    <div class="search-model">
-      <div class="h-100 d-flex align-items-center justify-content-center">
-        <div class="search-close-switch"><i class="icon_close"></i></div>
-        <form class="search-model-form">
-          <input type="text" id="search-input" placeholder="Search here....." />
-        </form>
-      </div>
-    </div>
-    <!-- Search model end -->
     <!-- bootstrap popperjs untuk -->
 
     <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
