--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -120,17 +120,30 @@ content%}
                 <span class="badge badge-primary badge-pill">21SA1052</span>
               </li>
               <li
-                class="list-group-item d-flex justify-content-between align-items-center"
+                class="list-group-item d-flex justify-content-between align-items-center bg-content text-primary border-primary"
               >
-                Dapibus ac facilisis in
-                <span class="badge badge-primary badge-pill">2</span>
+                Daffa Kurnia Putra
+                <span class="badge badge-primary badge-pill">21SA1060</span>
               </li>
               <li
-                class="list-group-item d-flex justify-content-between align-items-center"
+                class="list-group-item d-flex justify-content-between align-items-center bg-content text-primary border-primary"
               >
-                Morbi leo risus
-                <span class="badge badge-primary badge-pill">1</span>
+                Imun Faizal
+                <span class="badge badge-primary badge-pill">21SA1210</span>
               </li>
+              <li
+                class="list-group-item d-flex justify-content-between align-items-center bg-content text-primary border-primary"
+              >
+                Ikhsan Dwi Nugroho
+                <span class="badge badge-primary badge-pill">21SA1051</span>
+              </li>
+              <li
+                class="list-group-item d-flex justify-content-between align-items-center bg-content text-primary border-primary"
+              >
+                Galang Yudistira
+                <span class="badge badge-primary badge-pill">21SA1020</span>
+              </li>
+              
             </ul>
           </div>
         </div>
