--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -56,7 +56,7 @@ content%}
               <span class="icon_profile"></span>
             </div>
             <div class="input__item">
-              <input type="text" placeholder="Password" name="password" />
+              <input type="password" placeholder="Password" name="password" />
               <span class="icon_lock"></span>
             </div>
             <button type="submit" class="site-btn">Login Now</button>
